--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
@@ -104,9 +104,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="57" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="793" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="61" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="872" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="66" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="718" Canvas.Top="526" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Width="55" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="194" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="61" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="872" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="66" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="718" Canvas.Top="526" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
+        <Labels:Pipe Width="55" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="194" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1314" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
