--- a/Prevu.Synoptics.V4035_EcoGreen/WaterView.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/WaterView.xaml
@@ -216,7 +216,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="108" StatusComponent="229-21-CV1" Canvas.Left="242" Canvas.Top="359" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="108" StatusComponent="232-01-MA1" Canvas.Left="242" Canvas.Top="359" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
