V4309: Fix pipes on P970, fix on LSHA for BigBags Details

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D992.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D992.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="344" Width="368">
         <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="992-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="992-62-BAG" SignalName="LSHA" Canvas.Left="146" Canvas.Top="72"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="992-62-BAG" SignalName="SEL" Canvas.Left="148" Canvas.Top="214"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="992-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
     </Canvas>
