--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D899.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D899.xaml
@@ -12,9 +12,9 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Width="541" Height="350">
         <Machines:V01_BBF_DoubleBag Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="899-61-BAG" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="899-61-BAG" SignalName="LSHA" Canvas.Left="115" Canvas.Top="71"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="899-61-BAG" SignalName="SEL" Canvas.Left="117" Canvas.Top="205"/>
-        <Labels:SignalLabel ComponentName="899-62-BAG" SignalName="LSH" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="899-62-BAG" SignalName="LSHA" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel ComponentName="899-62-BAG" SignalName="SEL" Canvas.Left="360" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="899-61-BAG" Canvas.Left="105" Canvas.Top="150"/>
         <Labels:DeviceLabel ComponentName="899-62-BAG" Canvas.Left="348" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
